--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,14 @@
- /* ============================== Estilos globales ===============================*/
-body{
-	font-family: Verdana;
-	color: #444444;
-	font-size: 14px;
-	background: #fff;
-}
 
-p{
-	padding: 0px;
-	margin: 0px;
-	text-align: left;
-}
-
-a{ 
-	text-decoration: none;
-	color: #02a1bf;
-}
-
-h1,h2,h3,h4,h5,h6{
-	color: #02a1bf;
-}
 section#debug{
 	border-top: 1px solid #ededed;
-	min-height: 20px;
+	height: 20px;
+	line-height: 20px;
 	font-size: 12px;
 	width: 100%;
 	font-family: 'Ubuntu mono', sans-serif;
 	background: #f9f9f9;
+	margin: 10px;
+	text-align: center;
 }
 
 
@@ -39,57 +21,10 @@ section#top{
 }
 
 
-section#formulario{
-	background: #f9f9f9;
-	border: 1px solid #ededed;
-	min-height: 350px;
-	width: 60%;
-	margin: 30px auto;
-	padding: 10px;
-	border-radius: 6px;
-}
-
-section#formulario h1{
-	padding: 0px;
-	margin: 10px;
-	text-align: center;
-}
-
-section#formulario form {
-	margin: 0px auto;
-	width: 90%;
-}
-
-section#formulario form input{
-	border: 1px solid #c1c1c1;
+#cont-load{
 	height: 32px;
-	line-height: 32px;
-	margin: 5px 0px 5px 0px;
-	width: 100%;
-	
 }
- section#formulario form label{
- 	display: block;
- 	font-size: 16px;
- }
 
-
-section#formulario form input:focus{
-	outline: none;
-	border: 1px solid #02a1bf;
- }
-
-section#formulario form button{
-	border-radius: 4px;
-	height: 32px;
-	line-height: 32px;
-	background: #02a1bf;
-	color: #fff;
-	border: none;
-	margin: 10px auto;
-	display: block;
-	font-family: arial;
-}
 
 section#resultado{
 	background: #f9f9f9;
@@ -118,48 +53,6 @@ section#loading img{
 	margin: 0px auto;
 }	
 
-.grid1{
-	width: 100%;
-	min-height: 30px;
-	/*border: 1px solid #f00;*/
-	vertical-align: top;
-}
-.grid2{
-	width: 49.4%;
-	min-height: 30px;
-	display: inline-block;
-	vertical-align: top;
-	margin: 0px 0px 0px 0px;
-	/*border: 1px solid #f00;*/
-}
-.grid3{
-	width: 32.8%;
-	min-height: 30px;
-	/*border: 1px solid #f00;*/
-	display: inline-block;
-	vertical-align: top;
-}
-.grid4{
-	width: 24.2%;
-	min-height: 30px;
-	/*border: 1px solid #f00;*/
-	display: inline-block;
-	vertical-align: top;
-	/*border: 1px solid #f00;*/
-}
 
-/*====================================== media queries app =====================================================*/
-
-@media screen and (max-width: 400px){
-
-	section#resultado,section#formulario{
-		width: 90%;
-	}
-
-	section#formulario form button{
-		width: 100%;
-	}
-
-}
 
 
